k8s/base/services/cheater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheater
  namespace: cheater
spec:
  selector:
    matchLabels:
      app: cheater
  template:
    metadata:
      labels:
        app: cheater
    spec:
      containers:
        - image: cr.lffl.me/cheater:latest

          name: cheater
          resources: {}
          ports:
            - containerPort: 3000

              name: cheater
      restartPolicy: Always
      imagePullPolicy: Always
    imagePullSecrets:
      - name: lfflme-creds
