k8s/base/services/cheater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheater
  namespace: cheater
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: cheater
