k8s/base/services/cheater/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cheater
  namespace: cheater
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`45km3.lffl.me`)
      kind: Rule
      services:
        - name: cheater
          port: 3000
